--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "bio.jpg"
+  avatar           : "0097.jpg"
   bio              : "PhD student, HEC Paris"
   location         : "Paris, France"
   employer         :
