--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,8 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Research"
+    url: /research/
+   
     
   - title: "CV"
     url: /cv/
