--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : ""
   avatar           : "0097.jpg"
-  bio              : "PhD student, HEC Paris"
+  bio              : "PhD candidate, HEC Paris"
   location         : "Paris, France"
   employer         :
   pubmed           : 
