--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "0097.jpg"
   bio              : "PhD candidate, HEC Paris"
   location         : "Paris, France"
-  employer         : "https://www.hec.edu/en/faculty-research/faculty-directory/faculty-member/jain-atulya"
+  employer         : 
   pubmed           : 
   googlescholar    : 
   email            :  "atulya.jain@hec.edu"
