--- a/_config.yml
+++ b/_config.yml
@@ -73,9 +73,9 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
-  google:
-    tracking_id          :
+  provider               :  "google" # false (default), "google", "google-universal", "custom"
+  google: 
+    tracking_id          : "G-2R1MBLLY54"
 
 
 # Site Author
