--- a/_config.yml
+++ b/_config.yml
@@ -72,10 +72,13 @@ social:
 
 
 # Analytics
-analytics:
-  provider               :  "google" # false (default), "google", "google-universal", "custom"
-  google: 
-    tracking_id          : "G-2R1MBLLY54"
+#analytics:
+#  provider               :  "google" # false (default), "google", "google-universal", "custom"
+#  google: 
+ #   tracking_id          : ""
+
+    # Google Analytics
+google_analytics: "G-2R1MBLLY54"
 
 
 # Site Author
