--- a/_config.yml
+++ b/_config.yml
@@ -75,10 +75,10 @@ social:
 analytics:
  provider               :  "google" # false (default), "google", "google-universal", "custom"
  google: 
-   tracking_id          : 
+   tracking_id          :  "G-2R1MBLLY54"
 
-    # Google Analytics
-google_analytics: "G-2R1MBLLY54"
+#      Google Analytics
+# google_analytics: "G-2R1MBLLY54"
 
 
 # Site Author
