--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "IMG-20210606-WA0012.jpeg"
+  avatar           : "0097.jpg"
   bio              : "PhD candidate, HEC Paris"
   location         : "Paris, France"
   employer         : 
