--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ analytics:
 author:
   name             : ""
   avatar           : "0097.jpg"
-  bio              : "PhD candidate, HEC Paris"
-  location         : "Paris, France"
+  bio              : "Postdoc, University of Bonn"
+  location         : "Bonn, Germany"
   employer         : 
   pubmed           : 
   googlescholar    : 
