--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ author:
   employer         : 
   pubmed           : 
   googlescholar    : 
-  email            :  "atulya.jain@hec.edu"
+  email            :  "ajain@uni-bonn.de"
   researchgate     :  
   uri              :
   bitbucket        :
