--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ analytics:
 # Site Author
 author:
   name             : ""
-  avatar           : "/images/178-Hb88r3ly3ig.jpeg"
+  avatar           : "78-Hb88r3ly3ig.jpeg"
   bio              : "Postdoc, University of Bonn"
   location         : "Bonn, Germany"
   employer         : 
